--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "onCommand:leetcode.manageSessions",
         "onCommand:leetcode.refreshExplorer",
         "onCommand:leetcode.pickOne",
+        "onCommand:leetcode.diyExistFiles",
         "onCommand:leetcode.showProblem",
         "onCommand:leetcode.previewProblem",
         "onCommand:leetcode.searchProblem",
@@ -79,6 +80,11 @@
             {
                 "command": "leetcode.pickOne",
                 "title": "Pick One",
+                "category": "LeetCode"
+            },
+            {
+                "command": "leetcode.diyExistFiles",
+                "title": "DIY Exist Files ",
                 "category": "LeetCode"
             },
             {
