--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "vscode-leetcode",
-    "displayName": "LeetCode",
+    "name": "python-leetcode",
+    "displayName": "PythonLeetcode",
     "description": "Solve LeetCode problems in VS Code",
-    "version": "0.17.0",
-    "author": "Sheng Chen",
-    "publisher": "LeetCode",
+    "version": "1.0.0",
+    "author": "KuiyuanFu",
+    "publisher": "KuiyuanFu",
     "license": "MIT",
     "icon": "resources/LeetCode.png",
     "engines": {
